2006-10-30  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-url.c: (gnome_url_show_with_env):
	Handle failed logins with better feedback to the user.
	Patch from Sebastian Bacher. Closes bug #365342.

2006-10-23  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Update some.
	* libgnome/gnome-program.c: (gnome_program_init):
	GThread initialization fix from Tor and Tim. Closes bug #343490.

2006-10-23  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-score.c: Fix API docs for a function.
	Noted by Steve Chaplin. Closes bug #116457.

2006-10-23  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-sound.c: (use_sound), (gnome_sound_init),
	(gnome_sound_shutdown): Fix playback problems on NetBSD and possibly
	other platforms. Closes bug #155121. Patch from Cliff Wright.

2006-10-15  Daniel Drake  <dsd@gentoo.org>

	* libgnome/gnome-url.c: Interpret GNOME_VFS_ERROR_NOT_FOUND
	(bug #360932)

2006-09-26  Matthew Barnes  <mbarnes@redhat.com>

	* doc/reference/libgnomeui-docs.sgml: Make the API documentation
	easier to navigate (bug #357834).

2006-09-10  Tor Lillqvist  <tml@novell.com>

	* libgnome-zip.in: Include also
	$prefix/etc/gconf/gconf.xml.defaults in the zipfile.

======================== 2.16.0 ===========================

2006-08-31  Thomas Wood  <thos@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Revert the default gtk+
	theme name

2006-08-18  Kjartan Maraas  <kmaraas@gnome.org>

	* monikers/bonobo-moniker-conf-indirect.c:
	(bonobo_moniker_conf_indirect_resolve): Fix a leak.

======================= 2.15.2 =========================

2006-08-08  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist gtk-doc.make too.

2006-08-08  Thomas Wood  <thos@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Updated the gtk+ theme
	key to reflect the new name of the default theme

======================= 2.15.1 =========================

2006-07-10 Kjartan Maraas <kmaraas@gnome.org>
