@@ -1,6 +1,11 @@
 2006-10-30  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/gnome-url.c: (gnome_url_show_with_env):
+	Revert string change until we branch.
+
+2006-10-30  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libgnome/gnome-url.c: (gnome_url_show_with_env):
 	Handle failed logins with better feedback to the user.
 	Patch from Sebastian Bacher. Closes bug #365342.
 
